--- a/config.toml
+++ b/config.toml
@@ -51,7 +51,7 @@ enableGitInfo = false
   # AUTHOR SETUP
 
   # Your details.
-  name = "Zhiliang Lin"
+  name = "Zhiliang Lin 林志良"
   role = ""
 
   # Organizations/Affiliations.
