--- a/config.toml
+++ b/config.toml
@@ -340,13 +340,13 @@ enableGitInfo = false
   languageCode = "en-us"
 
 # Uncomment the lines below to configure your website in a second language.
-[languages.zh]
-  languageCode = "zh-Hans"
-  title = "林志良的个人网站"
-  [languages.zh.params]
-    name = "林志良"
-    role = "暨南大学传播学硕士"
-  [[languages.zh.menu.main]]
-    name = "林志良"
-    url = "#about"
-    weight = 1
+# [languages.zh]
+#  languageCode = "zh-Hans"
+#  title = "林志良的个人网站"
+#  [languages.zh.params]
+#    name = "林志良"
+#    role = "暨南大学传播学硕士"
+#  [[languages.zh.menu.main]]
+#    name = "林志良"
+#    url = "#about"
+#    weight = 1
