--- a/config.toml
+++ b/config.toml
@@ -62,7 +62,7 @@ enableGitInfo = false
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
 
   # Details for the Contact Widget
-  email = "zllin0759#gmail.com (replace # with @)"
+  email = "zllin0759@gmail.com"
   address = "601 Huangpu W Ave, Guangzhou, China"
   # office_hours = "Monday 10:00 to 13:00 or email for appointment"
   # phone = "888 888 88 88"
