--- a/config.toml
+++ b/config.toml
@@ -289,8 +289,8 @@ enableGitInfo = false
   weight = 3
 
 [[menu.main]]
-  name = "Publications"
-  url = "#publications"
+  name = "Papers"
+  url = "#papers"
   weight = 4
 
 #[[menu.main]]
