--- a/config.toml
+++ b/config.toml
@@ -203,7 +203,7 @@ enableGitInfo = false
     time = true
 
   # Configuration of publication pages.
-  [params.publications]
+  [params.pagers]
     # Date format (refer to https://sourcethemes.com/academic/docs/customization/#date-format )
     #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
     date_format = "January, 2006"
