--- a/config.toml
+++ b/config.toml
@@ -66,7 +66,7 @@ enableGitInfo = false
   address = "601 Huangpu W Ave, Guangzhou, China"
   # office_hours = "Monday 10:00 to 13:00 or email for appointment"
   # phone = "888 888 88 88"
-  skype = "live:1a73aba46afce9d8"
+  skype = "live:zhiliang-lin"
   telegram = ""
   keybase = ""  # Your keybase.io username.
 
