--- a/config.toml
+++ b/config.toml
@@ -263,7 +263,7 @@ enableGitInfo = false
    [[params.social]]
      icon = "cv"
      icon_pack = "ai"
-     link = "files/cv.pdf"
+     link = "files/Zhiliang Lin - CV.pdf"
 
 # Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
