--- a/config.toml
+++ b/config.toml
@@ -307,7 +307,7 @@ enableGitInfo = false
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
  [[menu.main]]
     name = "CV"
-    url = "files/cv.pdf"
+    url = "files/Zhiliang Lin - CV.pdf"
     weight = 7
 # I am creating a menu for research proposal
   [[menu.main]]
