--- a/config.toml
+++ b/config.toml
@@ -63,7 +63,7 @@ enableGitInfo = false
 
   # Details for the Contact Widget
   email = "zhiliang-lin@outlook.com"
-  address = "601 Huangpu W Ave, Guangzhou, China"
+  address = "3688 Nanhai Ave, Nanshan Qu, Shenzhen, China"
   # office_hours = "Monday 10:00 to 13:00 or email for appointment"
   # phone = "888 888 88 88"
   skype = "live:zhiliang-lin"
