--- a/config.toml
+++ b/config.toml
@@ -52,11 +52,11 @@ enableGitInfo = false
 
   # Your details.
   name = "Zhiliang Lin"
-  role = ""
+  role = "Research Assistant"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Jinan University", url = "" } ]
+  organizations = [ { name = "Shenzhen University", url = "" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
