--- a/config.toml
+++ b/config.toml
@@ -56,7 +56,7 @@ enableGitInfo = false
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Nanfang College of Sun Yat-sen University", url = "" } ]
+  organizations = [ { name = "Guangzhou Nanfang College", url = "http://en.nfu.edu.cn/" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
@@ -66,7 +66,7 @@ enableGitInfo = false
   address = "882 Wenquan Ave, Conghua District, Guangzhou, Guangdong Province, China"
   # office_hours = "Monday 10:00 to 13:00 or email for appointment"
   # phone = "888 888 88 88"
-  skype = "live:zhiliang-lin"
+  # skype = "live:zhiliang-lin"
   telegram = ""
   keybase = ""  # Your keybase.io username.
 
