--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@
 baseurl = "/"
 
 # Title of your site
-title = "Zhiliang Lin 林志良"
+title = "Zhiliang Lin 林志良 | Computational Communication Science"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
@@ -52,18 +52,18 @@ enableGitInfo = false
 
   # Your details.
   name = "Zhiliang Lin"
-  role = "Teaching Assistant"
+  role = "Researcher in Computational Communication Science"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Guangzhou Nanfang College", url = "http://en.nfu.edu.cn/" } ]
+  organizations = [ { name = "Ghent University", url = "https://www.ugent.be/en" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
 
   # Details for the Contact Widget
   email = "zhiliang-lin@outlook.com"
-  address = "882 Wenquan Ave, Conghua District, Guangzhou, Guangdong Province, China"
+  address = "Ghent, Belgium"
   # office_hours = "Monday 10:00 to 13:00 or email for appointment"
   # phone = "888 888 88 88"
   # skype = "live:zhiliang-lin"
@@ -90,10 +90,10 @@ enableGitInfo = false
   #   2: OpenStreetMap (Mapnik)
   #   3: OpenStreetMap (Mapbox)
   map = 0
-  map_api_key = ""
-  latitude = "37.4275"
-  longitude = "-122.1697"
-  zoom = 15
+#  map_api_key = ""
+#  latitude = "37.4275"
+#  longitude = "-122.1697"
+#  zoom = 15
 
   # SITE SETUP
 
