--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ title = "Zhiliang Lin 林志良 | Computational Communication Science"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
-copyright = "&copy; 2018"
+copyright = "&copy; 2025"
 
 theme = "academic"
 enableEmoji = true
@@ -62,7 +62,7 @@ enableGitInfo = false
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
 
   # Details for the Contact Widget
-  email = "zhiliang-lin@outlook.com"
+  email = "zhiliang.lin@ugent.be"
   address = "Ghent, Belgium"
   # office_hours = "Monday 10:00 to 13:00 or email for appointment"
   # phone = "888 888 88 88"
@@ -241,7 +241,7 @@ enableGitInfo = false
   [[params.social]]
     icon = "envelope"
     icon_pack = "fas"
-    link = "mailto:zhialiang-lin@outlook.com"
+    link = "mailto:zhiliang.lin@ugent.be"
 
   [[params.social]]
     icon = "twitter"
