--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@
 baseurl = "/"
 
 # Title of your site
-title = "Zhiliang Lin 林志良 | Computational Communication Science"
+title = "Zhiliang Lin 林志良"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
@@ -52,7 +52,7 @@ enableGitInfo = false
 
   # Your details.
   name = "Zhiliang Lin"
-  role = "Researcher in Computational Communication Science"
+  role = "M.S. student in Statistical Data Analysis"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
