--- a/config.toml
+++ b/config.toml
@@ -289,8 +289,8 @@ enableGitInfo = false
   weight = 3
 
 [[menu.main]]
-  name = "Papers"
-  url = "#papers"
+  name = "Publications"
+  url = "#Publications"
   weight = 4
 
 [[menu.main]]
@@ -301,7 +301,7 @@ enableGitInfo = false
 [[menu.main]]
   name = "Contact"
   url = "#contact"
-  weight = 5
+  weight = 6
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
