--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,7 @@
 [build]
-  publish = "public"
   command = "hugo"
+  publish = "public"
 
-[context.production.environment]
+[build.environment]
   HUGO_VERSION = "0.134.2"
-  HUGO_ENV = "production"
-  HUGO_ENABLEGITINFO = "true"
-  GIT_SUBMODULES = ""
+  GIT_SUBMODULES = "false"  # Explicitly set to false string
