--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@
 
 # The URL of your website.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "/"
+baseurl = "https://www.zhilianglin.com/"
 
 # Title of your site
 title = "Zhiliang Lin 林志良"
