--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,7 @@
 [module]
   [[module.imports]]
+    path = "github.com/HugoBlox/hugo-blox-builder/modules/blox-core/v5"
+  [[module.imports]]
     path = "github.com/HugoBlox/hugo-blox-builder/modules/blox-bootstrap/v5"
 
 # Configuration of Academic
