--- a/config.toml
+++ b/config.toml
@@ -1,42 +1,21 @@
-[module]
-  [[module.imports]]
-    path = "github.com/HugoBlox/hugo-blox-builder/modules/blox-core"
-  [[module.imports]]
-    path = "github.com/HugoBlox/hugo-blox-builder/modules/blox-bootstrap"
-
-# Configuration of Academic
+# Hugo Academic Theme Configuration
 # Documentation: https://sourcethemes.com/academic/
-#
-# This file is formatted using TOML syntax - learn more at https://learnxinyminutes.com/docs/toml/
-# Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
-# The URL of your website.
-# End your URL with a `/` trailing slash, e.g. `https://example.com/`.
 baseurl = "https://www.zhilianglin.com/"
-
-# Title of your site
 title = "Zhiliang Lin 林志良"
-
-# Your copyright notice - appears in site footer.
-# To display a copyright symbol, type `&copy;`.
 copyright = "&copy; 2025"
+theme = "academic" # Hugo Academic theme
 
-# theme = "academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 preserveTaxonomyNames = true
 paginate = 10
 
-# Enable comments by entering your Disqus shortname
 disqusShortname = ""
-
-# Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
-hasCJKLanguage = true # Set `true` for Chinese/Japanese/Korean languages.
+hasCJKLanguage = true
 defaultContentLanguageInSubdir = false
-
-# Get last modified date for content from Git?
 enableGitInfo = false
 
 [outputs]
@@ -45,206 +24,55 @@ enableGitInfo = false
 
 [services]
   [services.googleAnalytics]
-    ID = "" # 您可以把您的 GA ID (例如 "UA-...") 放在这里
+    ID = "" # Your Google Analytics ID
 
-# Configure BlackFriday Markdown rendering.
-#   See: https://gohugo.io/getting-started/configuration/#configure-blackfriday
 [blackfriday]
-  hrefTargetBlank = true # `true` opens external links in a new tab.
-  fractions = true # `false` disables smart fractions (e.g. 5/12 formatted as a fraction).
-  smartypants = true # `false` disables all smart punctuation substitutions (e.g. smart quotes, dashes, fractions).
+  hrefTargetBlank = true
+  fractions = true
+  smartypants = true
 
 [params]
-  # AUTHOR SETUP
-
-  # Your details.
   name = "Zhiliang Lin"
   role = "M.Sc. student in Statistical Data Analysis"
-
-  # Organizations/Affiliations.
-  #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
   organizations = [ { name = "Ghent University", url = "https://www.ugent.be/en" } ]
-
-  gravatar = false # Get your avatar from Gravatar.com? (true/false)
-  avatar = "portrait.jpg" # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
-
-  # Details for the Contact Widget
+  gravatar = false
+  avatar = "portrait.jpg"
   email = "zhiliang.lin@ugent.be"
-  # 修复 2: 将 "address" 字符串更改为下面的表格/对象格式
   address = { city = "Ghent", country = "Belgium", country_code = "BE" }
-  # office_hours = "Monday 10:00 to 13:00 or email for appointment"
-  # phone = "888 888 88 88"
-  # skype = "live:zhiliang-lin"
-  telegram = ""
-  keybase = "" # Your keybase.io username.
-
-  # Discussion link (e.g. link to a forum, mailing list, or chat).
-  #   Uncomment line below to use.
-  #   discussion = { name = "Discuss", url = "https://discourse.gohugo.io" }
-
-  # Enable/disable map in Contact widget.
-  # To show your address on a map in the contact widget, you need to enter your latitude, longitude and choose
-  # a map provider below.
-  # To use Google Maps, set `map = 1` and enter your API key that can be obtained here:
-  #   https://developers.google.com/maps/documentation/javascript/get-api-key
-  # To use OpenStreetMap tiles, set `map = 2`.
-  # To use OpenStreetMap on a high traffic site, set `map = 3` and enter your API key that can be obtained here:
-  #   https://www.mapbox.com/studio/account/tokens
-  # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-  #
-  # Map provider:
-  #   0: No map
-  #   1: Google Maps
-  #   2: OpenStreetMap (Mapnik)
-  #   3: OpenStreetMap (Mapbox)
   map = 0
-  #  map_api_key = ""
-  #  latitude = "37.4275"
-  #  longitude = "-122.1697"
-  #  zoom = 15
-
-  # SITE SETUP
-
-  # Color theme.
-  #   Choose from `default`, `ocean`, `forest`, `coffee`, `dark`, or `1950s`.
 
   color_theme = "forest"
-
-  # Font style.
-  #   Choose from `default`, `classic`, or `playfair`.
   font = "default"
-
-  # Description for social sharing and search engines. If undefined, author role is used in place.
   description = ""
-
-  # Default image for social sharing and search engines. Place image in `static/img/` folder and specify image name here.
   sharing_image = ""
-
-  # Twitter username (without @). Used when a vistor shares your site on Twitter.
   twitter = ""
-
-  # Diplay a logo in navigation bar rather than title (optional).
-  #   To enable, place an image in `static/img/` and reference its filename below. To disable, set the value to "".
   logo = ""
-
-  # Date and time format (refer to https://sourcethemes.com/academic/docs/customization/#date-format )
-  #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
   date_format = "Jan 2, 2006"
-  #   Examples: "3:04 pm" or "15:04"
   time_format = "3:04 PM"
-
-  # Show estimated reading time for posts?
   reading_time = true
-
-  # Display comment count? Requires commenting to be enabled.
   comment_count = true
-
-  # Display next/previous section pager?
   section_pager = false
-
-  # Enable global LaTeX math rendering?
-  #   If false, you can enable it locally on a per page basis.
   math = false
 
-  # Highlight.js options
-  #   highlight
-  #     Enable global source code highlighting?  If false, you can
-  #     override it for a particular page in that page's preamble.
-  #
-  #     Example: highlight = true
-  #
-  #   highlight_languages
-  #     Add support for highlighting additional languages. Support for
-  #     languages mentioned here will be included in all pages.
-  #
-  #     Example: highlight_languages = ["go", "lisp", "ocaml"]
-  #
-  #   highlight_style
-  #     Choose a different CSS style for highlighting source
-  #     code. Setting this option in a page's preamble has no
-  #     effect.
-  #
-  #     Example: highlight_style = "github-gist"
-  #
-  #   For the list of supported languages and styles, see:
-  #   https://cdnjs.com/libraries/highlight.js/
-  #
-  #   For more info on the highlighting options, see:
-  #   https://sourcethemes.com/academic/docs/writing-markdown-latex/#highlighting-options
   highlight = true
   highlight_languages = []
-  # highlight_style = "github"
+  highlight_style = "github-gist"
 
-  # Enable native social sharing buttons?
   sharing = true
-
-  # Privacy pack
-  #   Show a cookie consent message to visitors
-  #   Anonymize IP in Google Analytics (if enabled)
   privacy_pack = false
 
-  # Link custom CSS and JS assets
-  #   (relative to /static/css and /static/js respectively)
   custom_css = []
   custom_js  = []
 
-  # Publication types.
-  #   Used to categorize publications.
-  #   The index of the publication type in the list is used as its unique numerical identifier.
-  #   The numeric ID is used in a publication's frontmatter to categorize it.
-  #   The language can be edited below.
-  #   For multilingual sites, `publication_types` can be copied to each language section at the end of this file and
-  #   translated.
   publication_types = [
-    'Uncategorized',  # 0
-    'Conference paper',  # 1
-    'Journal article',  # 2
-    'Manuscript',  # 3
-    'Report',  # 4
-    'Book',  # 5
-    'Book section'  # 6
+    'Uncategorized',
+    'Conference paper',
+    'Journal article',
+    'Manuscript',
+    'Report',
+    'Book',
+    'Book section'
   ]
-
-  # Configuration of talk pages.
-  [params.talks]
-    # Show talk time?
-    time = true
-
-  # Configuration of publication pages.
-  [params.pagers]
-    # Date format (refer to https://sourcethemes.com/academic/docs/customization/#date-format )
-    #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
-    date_format = "January, 2006"
-
-  # Configuration of project pages.
-  [params.projects]
-    # List publications and talks related to the project?
-    list_children = true
-
-    # Publication list format.
-    #   0 = Simple
-    #   1 = Detailed
-    #   2 = APA
-    #   3 = MLA
-    publication_format = 3
-
-  # Social/Academic Networking
-  #
-  # Icon pack "fab" includes the following social network icons:
-  #
-  #   twitter, weibo, linkedin, github, facebook, pinterest, google-plus,
-  #   youtube, instagram, soundcloud
-  #
-  #   For email icon, use "fas" icon pack, "envelope" icon, and
-  #   "mailto:your@email.com" as the link.
-  #
-  #   Full list: https://fontawesome.com/icons
-  #
-  # Icon pack "ai" includes the following academic icons:
-  #
-  #   cv, google-scholar, arxiv, orcid, researchgate, mendeley
-  #
-  #   Full list: https://jpswalsh.github.io/academicons/
 
   [[params.social]]
     icon = "envelope"
@@ -266,19 +94,12 @@ enableGitInfo = false
     icon_pack = "fab"
     link = "//github.com/zhiliang-lin"
 
-  # Link to a PDF of your resume/CV from the About widget.
-  # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
   [[params.social]]
     icon = "cv"
     icon_pack = "ai"
     link = "files/Zhiliang Lin - CV.pdf"
 
-# Navigation Links
-#   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
-#   desired widget in your `content/home/` folder.
-#   The weight parameter defines the order that the links will appear in.
 [params.menus]
-  # Align the main menu to the right of the page? (true/false)
   align_right = true
 
 [[menu.main]]
@@ -311,60 +132,30 @@ enableGitInfo = false
   url = "#contact"
   weight = 6
 
-# Link to a PDF of your resume/CV from the menu.
-# To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 [[menu.main]]
   name = "CV"
   url = "files/Zhiliang Lin - CV.pdf"
   weight = 7
-# I am creating a menu for research proposal
-#  [[menu.main]]
-#    name = "Research Proposal"
-#    url = "files/Zhiliang Lin - Research Proposal.pdf"
-#    weight = 8
-	
-# Search.
-[params.search]
-  # Search provider:
-  #   0: No search engine
-  #   1: Built-in (Fuse)
-  #   2: Algolia (https://www.algolia.com)
-  #engine = 1
-  provider = "wowchemy"
-  # Configuration of Algolia search engine.
-  # Paste the values from your Algolia dashboard.
-  [params.search.algolia]
-    app_id = ""
-    api_key = ""
-    index_name = ""
-    show_logo = false
 
-# Taxonomies.
+[params.search]
+  provider = "wowchemy"
+
 [taxonomies]
   tag = "tags"
   category = "categories"
   publication_type = "publication_types"
 
-# Languages
-#   Create a [languages.X] block for each language you want, where X is the language ID.
-#   Refer to https://sourcethemes.com/academic/docs/language/
-
-# Configure the English version of the website.
 [languages.en]
   languageCode = "en-us"
 
-# Uncomment the lines below to configure your website in a second language.
+# Uncomment for Chinese language setup (if you want a bilingual site)
 # [languages.zh]
-#  languageCode = "zh-Hans"
-#  title = "林志良的个人网站"
-#  [languages.zh.params]
-#    name = "林志良"
-#    role = "暨南大学传播学硕士"
-#  [[languages.zh.menu.main]]
-#    name = "林志良"
-#    url = "#about"
-#    weight = 1
-
-
-[security.funcs]
-  getenv = ['^HUGO_', '^CI$', 'WC_POST_CSS']
+#   languageCode = "zh-Hans"
+#   title = "林志良的个人网站"
+#   [languages.zh.params]
+#     name = "林志良"
+#     role = "暨南大学传播学硕士"
+#   [[languages.zh.menu.main]]
+#     name = "林志良"
+#     url = "#about"
+#     weight = 1
